# CICB_pagina_web

./: .gitignore  docker-compose.yml  package-lock.json  package.json
backend/: .gitignore  aranceles.csv  nixpacks.toml  potosi_users.csv  pyproject.toml  rendimientos.xlsx  sc_users.csv  tarija_users.csv
backend/IMGs/: apps.py  models.py  serializers.py  urls.py  views.py
backend/IMGs/migrations/: 0001_initial.py  0002_remove_img_imagen_img_ruta.py
backend/PDFs/: models.py  serializers.py  urls.py  views.py
backend/api/: urls.py  views.py
backend/calls/: models.py  serializers.py  urls.py  views.py
backend/civil_salary/: apps.py  models.py  serializers.py  urls.py  views.py
backend/jobs/: models.py  serializers.py  urls.py  urls_admin.py  views.py  views_admin.py
backend/news/: models.py  serializers.py  urls.py  urls_admin.py  views.py  views_admin.py
backend/performance_chart/: apps.py  models.py  serializers.py  urls.py  views.py
backend/performance_table/: apps.py  models.py  serializers.py  urls.py  views.py
backend/project/: settings.py  urls.py
backend/regulation/: models.py  serializers.py  urls.py  views.py
backend/resource_chart/: apps.py  models.py  serializers.py  urls.py  views.py
backend/stats/: models.py  serializers.py  urls.py  views.py
backend/users/: authentication.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
backend/utils/: s3.py
backend/virtual_library/: models.py  serializers.py  urls.py  views.py
backend/yearbooks/: apps.py  models.py  serializers.py  urls.py  views.py
(+164 files in other folders)
